<resources>
    <string name="app_name">NoteSeed</string>
    <string name="copy">Copy</string>
    <string name="lock">Lock</string>
    <string name="clear">Clear</string>
    <string name="speak">Text to Speech</string>
    <string name="export">Export</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="search">Search</string>
    <string name="note">Note</string>
    <string name="new_note">New note</string>
    <string name="title">Title</string>
    <string name="empty">Nothing there, create something now!</string>
    <string name="pass">Password</string>
    <string name="text">Text</string>
    <string name="deleted">Deleted</string>
    <string name="about">About</string>
    <string name="onscreen">Appearance</string>
    <string name="theme">Theme</string>
    <string name="text_size">Text size</string>
    <string name="in_editor">In editor</string>
    <string name="security">Security</string>
    <string name="security2">Lock</string>
    <string name="background">Background</string>
    <string name="help_me">Support me</string>
    <string name="help_me_on_qiwi">Support me on QIWI</string>
    <string name="links">Links</string>
    <string name="telegram">Developer in Telegram</string>
    <string name="vk">Developer in VK</string>
    <string name="thanks">Acknowledgments</string>
    <string name="icon_by_emulond">Thank you very much for the icon!</string>
    <string name="use_pin">Use PIN</string>
    <string name="select_pin">Select PIN</string>
    <string name="use_finger">Use fingerprint</string>
    <string name="blue">Blue</string>
    <string name="orange">Orange</string>
    <string name="dark">Dark</string>
    <string name="fon_standart">Without background</string>
    <string name="fon_wallpaper">Your wallpaper</string>
    <string name="fingerprint_error">The fingerprint is not recognized, try again!</string>
    <string name="editing">Editing</string>
    <string name="wallpapers_ask">Will the text in the editor be white?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fingerprint_error2">You do not have a scanner!</string>
    <string name="fingerprint_error3">Android 6+ required </string>
    <string name="enable_pin">Enable PIN!</string>
    <string name="blocked">Locked!</string>
    <string name="saved">Successfully! Saved along the way: </string>
    <string name="new_folder">New folder</string>
    <string name="folder_error">A folder with the same name already exists!</string>
    <string name="folder_error2">Folder name cannot be empty!</string>
    <string name="folder_name">Enter the folder name</string>
    <string name="folder_in_folder">Folders in folders</string>
    <string name="nestabilno">Very unstable!</string>
    <string name="debug_title">Attention! All functions are unstable here! Enable them at your own risk!</string>
    <string name="folders">Folders</string>
    <string name="debug">Debug</string>
    <string name="create">Create</string>
    <string name="alern">You have enabled folders in folders! Renaming can cause bad things!</string>
    <string name="other">Other</string>
    <string name="clear_all">Clear entire database</string>
    <string name="updates">Updates</string>
    <string name="ota_updates">OTA update</string>
    <string name="check_updates">Check for updates</string>
    <string name="no_update">No updates! :(</string>
    <string name="yes_update">Update found!</string>
    <string name="import_db">Import</string>
    <string name="import_note_error1">Is it a text file? Are you sure?</string>
    <string name="new_version">A new version: </string>
    <string name="textSize_choose">Choose text size</string>
    <string name="textSize_standart">15 - standard size</string>
    <string name="download">Download</string>
    <string name="empty_note">Empty note</string>
    <string name="murleek">Thank you for translation!</string>
    <string name="empty_pass">Your password can not be empty!</string>
    <string name="success">Success!</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="color">Change background color</string>
    <string name="rename">Rename</string>
    <string name="notify">Notify</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="delete">Delete</string>
    <string name="delete_notify">Delete notify</string>
    <string name="themes">Themes</string>
    <string name="cancel">Cancel</string>
    <string name="force_save">Display "force save" button</string>
    <string name="use_mono">Monospace font</string>
    <string name="name">Name</string>
    <string name="format">Formatting</string>
    <string name="format_error">Select text!</string>
    <string name="confirm_delete">Are you sure want to delete it?</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="no_format">No formatting</string>
    <string name="donate">Donate</string>
    <string name="not_all_colors_found">Not all theme\'s colors were found!</string>
    <string name="restore_color">Restore color</string>
    <string name="change">Change</string>
    <string name="last_change">Last change was at </string>
    <string name="attach">Attach</string>
    <string name="pic">Picture</string>
    <string name="edit_pic">Change picture</string>
    <string name="pictures">Pictures</string>
    <string name="picture">Picture</string>
    <string name="one_more_time_to_delete">Tap one more time to delete</string>
    <string name="now">Now</string>
    <string name="set_time">Set time</string>
    <string name="z1">My team</string>
    <string name="backup_found">Choose backup!</string>
    <string name="restore">Restore</string>
    <string name="sync">Synchronization</string>
    <string name="sign_out">Sign out</string>
    <string name="export_gdrive">Export to GDrive</string>
    <string name="import_gdrive">Import from GDrive</string>
    <string name="file">File</string>
    <string name="two_rows">Two rows of notes</string>
    <string name="move_ro_folder">Move to folder</string>
    <string name="export_file_type">Select file extension</string>
    <string name="do_u_want_signin">Do you want to sign in with Google?</string>
    <string name="wihout_sign_in">Without it you will be unable to synchronize your notes!</string>
    <string name="account">Account</string>
    <string name="sign_in">Sign in</string>
    <string name="item_checkbox">TODO element</string>
    <string name="choose">Choose</string>
    <string name="where_themes">Where can I find themes?</string>
    <string name="there_themes">In special Telegram channel</string>
    <string name="no_folders">You do not have folders there!</string>
    <string name="new_notify">New notify</string>
    <string name="tap_to_search">Search notes</string>
    <string name="date_appearance">Date appearance</string>
    <string name="choose_date_appearance">Choose date appearance</string>
    <string name="main_menu_flex">Flex with main menu</string>
    <string name="notification">Notifications</string>
    <string name="syncing">Syncing</string>
    <string name="automatic_sync">Automatic synchronization</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="show_skolko_thing_on_folder">Show how many notes folder includes</string>
    <string name="shakal">Compress attached images</string>
    <string name="shakal_summary">May increase performance</string>
    <string name="enter_edit_mode">You are going to enter edit mode</string>
    <string name="warning">Warning!</string>
    <string name="enter">Enter</string>
    <string name="checking">View</string>
    <string name="auto_editmode">Enter edit mode without view mode</string>
    <string name="pin_in_status_bar">Pin in status bar</string>
    <string name="unpin_from_status_bar">Unpin from status bar</string>
    <string name="autolock">Automatically lock app after 1 minute</string>
    <string name="translations">Translations</string>
    <string name="add_translation">Add translation</string>
    <string name="default_name">Default</string>
    <string name="ok">OK</string>
    <string name="gdrive">GDrive</string>
    <string name="edit_translation">Edit translation</string>
</resources>