<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:icon="@mipmap/ic_launcher_round" android:title="NoteSeed" android:summary="Made by F0x1d" android:selectable="false" />
    <Preference
        android:title="@string/about" android:key="about" />

    <PreferenceCategory android:title="@string/onscreen">
        <Preference
            android:title="@string/theme" android:key="dayAccent"/>
        <Preference
            android:title="@string/editing" android:key="editor_settings"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/security">
        <Preference
            android:title="@string/security2" android:key="locking"  />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/debug">
        <Preference
            android:title="@string/debug" android:key="debug"  />
    </PreferenceCategory>

</PreferenceScreen>