<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.f0x1d.notes.help.view.preferences.MyPreference android:summary="@string/debug_title" android:selectable="false"/>

    <com.f0x1d.notes.help.view.preferences.MyPreferenceCategory android:title="@string/folders">
        <com.f0x1d.notes.help.view.preferences.MySwitchPreference android:title="@string/folder_in_folder" android:summary="@string/nestabilno" android:key="f_in_f"/>
        <com.f0x1d.notes.help.view.preferences.MySwitchPreference android:title="@string/format" android:summary="@string/nestabilno" android:key="format"/>
    </com.f0x1d.notes.help.view.preferences.MyPreferenceCategory>
    <com.f0x1d.notes.help.view.preferences.MyPreferenceCategory android:title="@string/other">
        <com.f0x1d.notes.help.view.preferences.MyPreference android:title="@string/clear_all" android:key="delete_all"/>
    </com.f0x1d.notes.help.view.preferences.MyPreferenceCategory>
</PreferenceScreen>