<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="always"
        android:id="@+id/attach"/>
    <item
        android:id="@+id/lock"
        android:checkable="true"
        android:title="@string/lock"/>
    <item
        android:title="@string/export"
        android:id="@+id/export"/>
    <item
        android:title="@string/pin_in_status_bar"
        android:id="@+id/pin_status"/>
    <item
        android:title="@string/formatting">
        <menu>
            <group>
                <item
                    android:id="@+id/bold"
                    android:title="@string/bold"/>
                <item
                    android:id="@+id/italic"
                    android:title="@string/italic"/>
                <item
                    android:id="@+id/link"
                    android:title="@string/link"/>
            </group>
        </menu>
    </item>
    <item
        android:title="@string/settings"
        android:id="@+id/settings"/>
</menu>