<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <com.f0x1d.notes.view.CenteredToolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content">
    </com.f0x1d.notes.view.CenteredToolbar>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_height="wrap_content" />

    <com.f0x1d.notes.view.theming.MyButton
        android:layout_width="match_parent"
        android:id="@+id/about"
        android:text="@string/about"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_height="wrap_content" />

    <com.f0x1d.notes.view.theming.MyButton
        android:layout_width="match_parent"
        android:id="@+id/theme"
        android:text="@string/theme"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_height="wrap_content" />

    <com.f0x1d.notes.view.theming.MyButton
        android:layout_width="match_parent"
        android:id="@+id/editing"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/editing"
        android:textAllCaps="false"
        android:layout_height="wrap_content" />

    <com.f0x1d.notes.view.theming.MyButton
        android:layout_width="match_parent"
        android:id="@+id/lock"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/lock"
        android:textAllCaps="false"
        android:layout_height="wrap_content" />

    <com.f0x1d.notes.view.theming.MyButton
        android:layout_width="match_parent"
        android:id="@+id/debug"
        android:text="@string/debug"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textAllCaps="false"
        android:layout_height="wrap_content" />

</LinearLayout>