<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/background"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar_md2" android:id="@+id/toolbar_place"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/notes_view"
        android:layout_marginBottom="50dp"
        android:layout_below="@id/toolbar_place"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

    <com.f0x1d.notes.view.theming.MyTextView
        android:id="@+id/nothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:elevation="2dp"
        android:layout_centerVertical="true"
        android:text="@string/empty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:id="@+id/open_area"
        android:layout_height="wrap_content">

        <com.f0x1d.notes.view.theming.MyButton
            android:layout_width="match_parent"
            android:text="@string/new_note"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"
            android:id="@+id/new_note"
            android:layout_weight="3"
            android:gravity="center|start"
            android:layout_height="wrap_content" />

        <com.f0x1d.notes.view.theming.MyImageButton
            android:layout_width="50dp"
            android:id="@+id/open_slide"
            android:foreground="?attr/selectableItemBackground"
            android:background="@null"
            android:clickable="true"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_drop_up_black_24dp"
            android:layout_height="50dp" />
    </LinearLayout>



    <com.f0x1d.notes.view.theming.ItemCardView
        android:layout_width="match_parent"
        android:id="@+id/slideView"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="15dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.f0x1d.notes.view.theming.MyImageButton
                android:layout_width="50dp"
                android:id="@+id/close_slide"
                android:foreground="?attr/selectableItemBackground"
                android:background="@null"
                android:clickable="true"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_drop_down_black_24dp"
                android:layout_height="50dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:id="@+id/pic"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="15dp"
                    android:layout_height="wrap_content" />

                <com.f0x1d.notes.view.theming.MyTextView
                    android:layout_width="wrap_content"
                    android:id="@+id/name"
                    android:layout_toEndOf="@id/pic"
                    android:layout_centerVertical="true"
                    android:layout_margin="15dp"
                    android:text="@string/app_name"
                    android:layout_height="wrap_content" />

                <com.f0x1d.notes.view.theming.MyImageButton
                    android:layout_width="50dp"
                    android:id="@+id/settings_pic"
                    android:foreground="?attr/selectableItemBackground"
                    android:background="@null"
                    android:clickable="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:foregroundGravity="center"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_settings_black_24dp"
                    android:layout_height="50dp" />

                <com.f0x1d.notes.view.theming.MyImageButton
                    android:layout_width="50dp"
                    android:id="@+id/search_pic"
                    android:foreground="?attr/selectableItemBackground"
                    android:background="@null"
                    android:clickable="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:foregroundGravity="center"
                    android:layout_toStartOf="@id/settings_pic"
                    android:src="@drawable/ic_search_black_24dp"
                    android:layout_height="50dp" />
            </RelativeLayout>

            <com.f0x1d.notes.view.theming.MyTextView
                android:drawableLeft="@drawable/ic_notifications_active_black_24dp"
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_marginEnd="3dp"
                android:drawablePadding="40dp"
                android:gravity="start|center"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:text="@string/new_notify"
                android:id="@+id/new_notify"
                android:layout_marginStart="40dp"
                android:layout_height="wrap_content" />

            <com.f0x1d.notes.view.theming.MyTextView
                android:layout_width="match_parent"
                android:id="@+id/new_folder"
                android:text="@string/new_folder"
                android:drawableLeft="@drawable/ic_folder_black_24dp"
                android:gravity="start|center"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="40dp"
                android:background="?attr/selectableItemBackground"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="40dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </com.f0x1d.notes.view.theming.ItemCardView>
</RelativeLayout>